# src/interfaces/types.ts
@@ -3,10 +3,20 @@ export interface PullResponse {
   close: number;
 }
 
+export interface PullResponseArrayObj {
+  month: string;
+  open: number;
+  close: number;
+}
 export interface calculateDate {
   (date: string): string[];
 }
 
 export interface validateDate {
   (date: string): boolean;
+}
+
+export interface DatePair {
+  month: string;
+  year: string;
 }
